# Nova5-Vision-ObstacleAvoidance

./: README.md
install/: local_setup.sh  setup.sh
install/cr10_moveit/share/cr10_moveit/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr12_moveit/share/cr12_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr16_moveit/share/cr16_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr3_moveit/share/cr3_moveit/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr5_moveit/share/cr5_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cr7_moveit/share/cr7_moveit/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cra_description/share/cra_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dobot_bringup_v3/lib/dobot_bringup_v3/: dobot_bringup  feedback
install/dobot_bringup_v3/share/dobot_bringup_v3/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dobot_demo/lib/dobot_demo/: demo
log/: latest_build
src/DOBOT_6Axis_ROS2_V3/: README.md  README_EN.md
src/obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/obstacle_avoidance/launch/: camera_optimized.launch.py  move_group_sensors.launch.py  obstacle_avoidance.launch.py
src/obstacle_avoidance/scripts/: drag_after_execute.py
(+868 files in other folders)
